--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 						<div class="form-group ">
 							<!--<a href="#" target="_blank" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>-->
-							<button type="button">Submit</button>
+							<button type="button" style="color : black">Submit</button>
 						</div>
 						
 					</form>
